lab1/Test/L1-A-0-66.output
Error Type A at Line 5
Error Type A at Line 10
Error Type A at Line 11
Error Type A at Line 11
